add python multiprocessing

--- a/source/_posts/熵的意义.md
+++ b/source/_posts/熵的意义.md
@@ -9,6 +9,8 @@ $$
 H(x) = -\sum_0^n(p_i*\log p_i)
 $$
 
+<!-- more -->
+
 信息熵通常代表一段序列包含的信息量的大小。如果序列容易预测，表示所含的信息量很低，相反不容易预测，就称为信息量大。
 
 进一步讲，概率越小的事情发生了，越超越人类认知，包含的信息量也越大，比如月球撞击地球。
